# KITT

./: .dockerignore  .env.example  .env.example.fix  .env.example.phase4  .env.quality-first-example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CodeCat.py  ENV_REPORT.md  GAP_ANALYSIS.md  GAP_ANALYSIS_SUMMARY.txt  IO_CONTROL_PLAN.md  KITT.code-workspace  KITTY_OperationsManual.md  KITT_DATA_FLOW_ANALYSIS.md  KITT_EXECUTIVE_SUMMARY.md  KITT_QUICK_REFERENCE.txt  KITT_SYSTEM_ANALYSIS_MASTER.md  PR_DESCRIPTION.md  QUICK_REFERENCE.txt  README.md  SD_SECTION.md  agentic_workflow_response.json  benchmark-results-20251105-235951.txt  benchmark-results-20251106-000206.txt  benchmark-results-20251106-000439.txt  benchmark-results-20251106-000501.txt  benchmark-results-20251106-001139.txt  chain_of_thought_response.json  package-lock.json  test-prompt.json  test_agent_tools.py  test_agentic_workflow.json  test_athene_tool_calling.py  test_chain_of_thought.json  test_unified_prompts.py
services/brain/: Dockerfile  pyproject.toml
services/brain/migrations/: 006_research_checkpoints.sql  007_research_results.sql  008_evidence_tracking.sql  README.md
services/brain/src/brain/: __init__.py  app.py  dependencies.py  llm_client.py  logging_config.py  orchestrator.py  token_budgets.py  usage_stats.py
services/brain/src/brain/agents/: __init__.py  prompt_templates.py  react_agent.py  types.py
services/brain/src/brain/autonomous/: __init__.py  distributed_lock.py  feedback_loop.py  goal_generator.py  jobs.py  outcome_measurement_cycle.py  outcome_tracker.py  project_generator.py  resource_manager.py  scheduler.py  task_executor.py  time_utils.py
services/brain/src/brain/cad/: __init__.py  prompt_enhancer.py  prompt_templates.py
services/brain/src/brain/clients/: home_assistant.py  home_assistant_ws.py
services/brain/src/brain/config/: __init__.py  performance.py
services/brain/src/brain/conversation/: __init__.py  auto_persist.py  persistent_state.py  safety.py  state.py  sync_wrapper.py
services/brain/src/brain/data/: __init__.py  model_cards.py
services/brain/src/brain/knowledge/: __init__.py  updater.py
services/brain/src/brain/memory/: __init__.py  client.py
services/brain/src/brain/metrics/: __init__.py  slo.py
services/brain/src/brain/models/: context.py
services/brain/src/brain/projects/: __init__.py  manager.py  task_scheduler.py
services/brain/src/brain/prompts/: __init__.py  expert_system.py  tool_formatter.py  unified.py
services/brain/src/brain/research/: __init__.py  checkpoint.py  collective_evaluator.py  disk_manager.py  events.py  extraction.py  extraction_schemas.py  finetune_pipeline.py  memory_scheduler.py  model_lifecycle.py  providers.py  routes.py  search_cache.py  search_dedup.py  session_manager.py  (+4 more)
services/brain/tests/: test_academic_sources.py  test_token_budgets.py
services/cad/: Dockerfile  pyproject.toml
services/cad/src/cad/: __init__.py  app.py  cycler.py  dependencies.py  models.py
services/cli/: pyproject.toml
services/cli/src/cli/: main.py  storage.py
services/common/: alembic.ini  pyproject.toml
services/common/alembic/: README.md  env.py  script.py.mako
services/common/alembic/versions/: 001_initial_schema.py  4e5f6a7b8c9d_add_conversation_projects_soft_delete.py  691659ea_add_outcome_tracking_for_phase3.py  6e45f2a1_add_phase4_fabrication_intelligence.py  8906d16f2252_merge_heads.py  a2b3c4d5_add_visual_evidence_to_print_outcomes.py  a5b6c7d8e9f0_add_dataset_generation.py  c1d2e3f4_autonomy_calendar.py  c5d9e8f1c2b3_add_conversation_history.py  db9a62569b46_add_autonomous_project_management_models.py  f7g8h9i0j1k2_add_conversation_state_persistence.py  k1l2m3n4o5p6_add_apscheduler_job_persistence.py
services/common/src/common/: __init__.py  cache.py  config.py  credentials.py  homeassistant.py  http.py  logging.py  messaging.py  mqtt.py  notifications.py  schemas.py  security.py  verbosity.py
services/discovery/: Dockerfile  pyproject.toml  requirements.txt
services/discovery/src/discovery/: __init__.py  app.py  models.py  oui.py
services/fabrication/: Dockerfile  README.md  printer_config.example.yaml  pyproject.toml
services/fabrication/data/bambu/: token.json
services/fabrication/docs/: beam-search.md  oblique-cutting-planes.md  overhang-aware-scoring.md  seam-visibility-scoring.md  surface-shell-hollowing.md
services/fabrication/src/fabrication/: __init__.py  app.py  camera_capture.py  config.py  print_outcome_tracker.py
services/fabrication/static/: queue.html
services/fabrication/tests/: __init__.py  conftest.py  test_engine.py  test_geometry.py  test_routes.py  test_schemas.py
services/fabrication/tests/benchmarks/: __init__.py  conftest.py  test_cut_quality.py  test_performance.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway/: app.py
services/kitty-code/: README.md  pyproject.toml
services/kitty-code/docs/: MCP_SERVERS.md  SPEC.md
services/kitty-code/src/kitty_code/: __init__.py
services/kitty-code/tests/integration/: __init__.py
services/kitty-code/tests/unit/: test_format_handler.py
services/launcher/: pyproject.toml
services/launcher/src/launcher/: __init__.py  app.py
services/mem0-mcp/: Dockerfile  pyproject.toml
services/mem0-mcp/src/mem0_mcp/: __init__.py  app.py
services/model-manager/: README.md  pyproject.toml
services/model-manager/src/model_manager/: __init__.py  app.py  config.py  health.py  main.py  models.py  process.py  scanner.py  supervisor.py
services/model-manager/tests/: __init__.py  test_config.py  test_scanner.py
services/safety/: Dockerfile  pyproject.toml
services/safety/src/safety/: app.py  audit.py  policies.py  signing.py
services/settings/: Dockerfile  pyproject.toml
services/settings/src/settings/: __init__.py  app.py  models.py  routes.py  storage.py
services/voice/: pyproject.toml
services/voice/src/voice/: __init__.py  app.py  brain_client.py  dependencies.py  kokoro_manager.py  kokoro_tts.py  parser.py  router.py  stt.py  tts.py  wake_word.py  websocket.py
(+1085 files in other folders)
