[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "kitty-brain"
version = "0.1.0"
description = "KITTY conversational orchestration service"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anyio>=4.4",
  "apscheduler>=3.10",
  "psutil>=6.0",
  "fastapi>=0.111",
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
  "rich>=13.7",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "python-frontmatter>=1.0",
  # Research tools dependencies
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "html5lib>=1.1",
  "markdownify>=0.13",
  "simhash>=2.1",
  "duckduckgo-search>=6.0",
  "sentence-transformers>=3.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.ruff]
line-length = 100
