[project]
name = "kitty-cad"
version = "0.1.0"
description = "CAD orchestration service for KITTY"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "anyio>=4.4",
  "pydantic>=2.7",
  "minio>=7.2",
  "cadquery>=2.5.0"  # optional fallback pipeline
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
