[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "kitty-cli"
version = "0.1.0"
description = "SSH-friendly CLI client for KITTY orchestrator"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx>=0.27",
  "prompt-toolkit>=3.0",
  "python-dotenv>=1",
  "rich>=13.7",
  "typer[all]>=0.12.3",
  "websockets>=12.0",
]

scripts.kitty-cli = "cli.main:app"
