[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "kitty-discovery"
version = "0.1.0"
description = "Network device discovery service for KITTY"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anyio>=4.4",
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "zeroconf>=0.132",
  "ssdpy>=0.4",
  "python-nmap>=0.7",
  "scapy>=2.5",
  "mac-vendor-lookup>=0.1",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "httpx>=0.26",
  "apscheduler>=3.10",
  "asyncio-mqtt>=0.16",
  "structlog>=24.1",
  "python-dotenv>=1.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]
