[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "kitty-fabrication"
version = "0.1.0"
description = "Fabrication orchestration service for KITTY"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anyio>=4.4",
  "aiohttp>=3.9",
  "fastapi>=0.111",
  "httpx>=0.27",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "paho-mqtt>=2.1.0",
  "pandas>=2.0",
  "pika>=1.3.2",
  "pydantic>=2.7",
  "scikit-learn>=1.3",
  "trimesh>=4.5.0",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]
