[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "kitty-fabrication"
version = "0.1.0"
description = "Fabrication orchestration service for KITTY"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anyio>=4.4",
  "aiohttp>=3.9",
  "fastapi>=0.111",
  "httpx>=0.27",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "paho-mqtt>=2.1.0",
  "pandas>=2.0",
  "pika>=1.3.2",
  "pydantic>=2.7",
  "scikit-learn>=1.3",
  "scikit-image>=0.22",  # Required for trimesh marching_cubes
  "trimesh[easy]>=4.5.0",
  "uvicorn[standard]>=0.30",
  # Mesh segmentation dependencies
  "manifold3d>=3.0.0",
  "networkx>=3.0",
  "shapely>=2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "httpx>=0.27",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
]
