[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "kitty-gateway"
version = "0.1.0"
description = "API gateway service for KITTY"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anyio>=4.4",
  "bcrypt>=4.1",
  "fastapi>=0.111",
  "httpx>=0.27",
  "minio>=7.2",
  "pydantic>=2.7",
  "pyjwt>=2.8",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]
