[project]
name = "kitty-code"
version = "0.2.0"
description = "Local-first AI coding assistant for KITTY fabrication lab"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "KITTY Team" }]
keywords = [
    "ai",
    "cli",
    "coding-assistant",
    "fabrication",
    "local-first",
    "llm",
    "developer-tools",
    "kitty",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "agent-client-protocol>=0.6.3",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "mcp>=1.14.0",
    "mistralai>=1.9.11",
    "pexpect>=4.9.0",
    "packaging>=24.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
    "textual>=1.0.0",
    "tomli-w>=1.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "watchfiles>=1.1.1",
    "pyperclip>=1.11.0",
    "textual-speedups>=0.2.1",
]

[project.optional-dependencies]
cloud = ["mistralai>=1.9.11"]
semantic = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/KITTY-AI/kitty-code"
Repository = "https://github.com/KITTY-AI/kitty-code"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kitty_code"]

[project.scripts]
kitty-code = "kitty_code.cli.entrypoint:main"
kitty-code-acp = "kitty_code.acp.entrypoint:main"

[tool.ruff]
include = ["src/kitty_code/**/*.py", "tests/**/*.py"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I", "UP", "B0"]
ignore = ["D203", "D205", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["kitty_code"]
force-sort-within-sections = true

[tool.pytest.ini_options]
addopts = "-vvvv -q --import-mode=importlib"
timeout = 10
