[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kitty-launcher"
version = "0.1.0"
description = "KITTY Unified Launcher TUI - Single command to manage the entire KITTY system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47",
    "rich>=13.7",
    "httpx>=0.27",
    "docker>=7.0",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "prompt-toolkit>=3.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "aiofiles>=23.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
kitty = "launcher.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RET", "SIM", "TID", "ARG", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR2004"]
