[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "kitty-mem0-mcp"
version = "0.1.0"
description = "MCP-based memory service for KITTY using Qdrant"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "numpy>=1.24",
  "pydantic>=2.7",
  "qdrant-client>=1.11",
  "sentence-transformers>=3",
  "torch>=2",
  "uvicorn[standard]>=0.30",
]
