[project]
name = "kitty-voice"
version = "0.1.0"
description = "Voice capture and command parsing service for KITTY"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sounddevice>=0.5",
  "numpy>=1.26",
  "httpx>=0.27"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
