[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=68", "wheel" ]

[project]
name = "kitty-voice"
version = "0.1.0"
description = "Voice capture and command parsing service for KITTY"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "numpy>=1.26",
  "pydantic>=2.7",
  "sounddevice>=0.5",
  "uvicorn[standard]>=0.30",
  "websockets>=12.0",
  "openai>=1.30",
]

[project.optional-dependencies]
local = [
  "whispercpp>=0.0.17",  # Local Whisper STT
  "kokoro-onnx>=0.4.0",  # Local TTS with Apple Silicon optimization
  "pvporcupine>=3.0.0",  # Porcupine wake word detection
  "pyaudio>=0.2.14",     # Audio capture for wake word
]
apple-silicon = [
  "onnxruntime-silicon>=1.19.0",  # Apple Silicon optimized ONNX runtime
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [ "src" ]
